--- a/bibl.bib
+++ b/bibl.bib
@@ -219,7 +219,7 @@
 }
 
 @Article{Brennan_2013,
-  author    = {Brennan, Cameron W. and Verhaak, Roel G.W. and McKenna, Aaron and Campos, Benito and Noushmehr, Houtan and Salama, Sofie R. and Zheng, Siyuan and Chakravarty, Debyani and Sanborn, J. Zachary and Berman, Samuel H. and Beroukhim, Rameen and Bernard, Brady and Wu, Chang-Jiun and Genovese, Giannicola and Shmulevich, Ilya and Barnholtz-Sloan, Jill and Zou, Lihua and Vegesna, Rahulsimham and Shukla, Sachet A. and Ciriello, Giovanni and Yung, W.K. and Zhang, Wei and Sougnez, Carrie and Mikkelsen, Tom and Aldape, Kenneth and Bigner, Darell D. and Van Meir, Erwin G. and Prados, Michael and Sloan, Andrew and Black, Keith L. and Eschbacher, Jennifer and Finocchiaro, Gaetano and Friedman, William and Andrews, David W. and Guha, Abhijit and Iacocca, Mary and O’Neill, Brian P. and Foltz, Greg and Myers, Jerome and Weisenberger, Daniel J. and Penny, Robert and Kucherlapati, Raju and Perou, Charles M. and Hayes, D. Neil and Gibbs, Richard and Marra, Marco and Mills, Gordon B. and Lander, Eric and Spellman, Paul and Wilson, Richard and Sander, Chris and Weinstein, John and Meyerson, Matthew and Gabriel, Stacey and Laird, Peter W. and Haussler, David and Getz, Gad and Chin, Lynda and Benz, Christopher and Barnholtz-Sloan, Jill and Barrett, Wendi and Ostrom, Quinn and Wolinsky, Yingli and Black, Keith L. and Bose, Bikash and Boulos, Paul T. and Boulos, Madgy and Brown, Jenn and Czerinski, Christine and Eppley, Matthew and Iacocca, Mary and Kempista, Thelma and Kitko, Teresa and Koyfman, Yakov and Rabeno, Brenda and Rastogi, Pawan and Sugarman, Michael and Swanson, Patricia and Yalamanchii, Kennedy and Otey, Ilana P. and Liu, Yingchun Spring and Xiao, Yonghong and Auman, J.Todd and Chen, Peng-Chieh and Hadjipanayis, Angela and Lee, Eunjung and Lee, Semin and Park, Peter J. and Seidman, Jonathan and Yang, Lixing and Kucherlapati, Raju and Kalkanis, Steven and Mikkelsen, Tom and Poisson, Laila M. and Raghunathan, Aditya and Scarpace, Lisa and Bernard, Brady and Bressler, Ryan and Eakin, Andrea and Iype, Lisa and Kreisberg, Richard B. and Leinonen, Kalle and Reynolds, Sheila and Rovira, Hector and Thorsson, Vesteinn and Shmulevich, Ilya and Annala, Matti J. and Penny, Robert and Paulauskis, Joseph and Curley, Erin and Hatfield, Martha and Mallery, David and Morris, Scott and Shelton, Troy and Shelton, Candace and Sherman, Mark and Yena, Peggy and Cuppini, Lucia and DiMeco, Francesco and Eoli, Marica and Finocchiaro, Gaetano and Maderna, Emanuela and Pollo, Bianca and Saini, Marco and Balu, Saianand and Hoadley, Katherine A. and Li, Ling and Miller, C. Ryan and Shi, Yan and Topal, Michael D. and Wu, Junyuan and Dunn, Gavin and Giannini, Caterina and O’Neill, Brian P. and Aksoy, B. Arman and Antipin, Yevgeniy and Borsu, Laetitia and Berman, Samuel H. and Brennan, Cameron W. and Cerami, Ethan and Chakravarty, Debyani and Ciriello, Giovanni and Gao, Jianjiong and Gross, Benjamin and Jacobsen, Anders and Ladanyi, Marc and Lash, Alex and Liang, Yupu and Reva, Boris and Sander, Chris and Schultz, Nikolaus and Shen, Ronglai and Socci, Nicholas D. and Viale, Agnes and Ferguson, Martin L. and Chen, Qing-Rong and Demchok, John A. and Dillon, Laura A.L. and Shaw, Kenna R. Mills and Sheth, Margi and Tarnuzzer, Roy and Wang, Zhining and Yang, Liming and Davidsen, Tanja and Guyer, Mark S. and Ozenberger, Bradley A. and Sofia, Heidi J. and Bergsten, Julie and Eckman, John and Harr, Jodi and Myers, Jerome and Smith, Christine and Tucker, Kelly and Winemiller, Cindy and Zach, Leigh Anne and Ljubimova, Julia Y. and Eley, Greg and Ayala, Brenda and Jensen, Mark A. and Kahn, Ari and Pihl, Todd D. and Pot, David A. and Wan, Yunhu and Eschbacher, Jennifer and Foltz, Greg and Hansen, Nathan and Hothi, Parvi and Lin, Biaoyang and Shah, Nameeta and Yoon, Jae-geun and Lau, Ching and Berens, Michael and Ardlie, Kristin and Beroukhim, Rameen and Carter, Scott L. and Cherniack, Andrew D. and Noble, Mike and Cho, Juok and Cibulskis, Kristian and DiCara, Daniel and Frazer, Scott and Gabriel, Stacey B. and Gehlenborg, Nils and Gentry, Jeff and Heiman, David and Kim, Jaegil and Jing, Rui and Lander, Eric S. and Lawrence, Michael and Lin, Pei and Mallard, Will and Meyerson, Matthew and Onofrio, Robert C. and Saksena, Gordon and Schumacher, Steve and Sougnez, Carrie and Stojanov, Petar and Tabak, Barbara and Voet, Doug and Zhang, Hailei and Zou, Lihua and Getz, Gad and Dees, Nathan N. and Ding, Li and Fulton, Lucinda L. and Fulton, Robert S. and Kanchi, Krishna-Latha and Mardis, Elaine R. and Wilson, Richard K. and Baylin, Stephen B. and Andrews, David W. and Harshyne, Larry and Cohen, Mark L. and Devine, Karen and Sloan, Andrew E. and VandenBerg, Scott R. and Berger, Mitchel S. and Prados, Michael and Carlin, Daniel and Craft, Brian and Ellrott, Kyle and Goldman, Mary and Goldstein, Theodore and Grifford, Mia and Haussler, David and Ma, Singer and Ng, Sam and Salama, Sofie R. and Sanborn, J. Zachary and Stuart, Joshua and Swatloski, Teresa and Waltman, Peter and Zhu, Jing and Foss, Robin and Frentzen, Barbara and Friedman, William and McTiernan, Raquel and Yachnis, Anthony and Hayes, D. Neil and Perou, Charles M. and Zheng, Siyuan and Vegesna, Rahulsimham and Mao, Yong and Akbani, Rehan and Aldape, Kenneth and Bogler, Oliver and Fuller, Gregory N. and Liu, Wenbin and Liu, Yuexin and Lu, Yiling and Mills, Gordon and Protopopov, Alexei and Ren, Xiaojia and Sun, Youting and Wu, Chang-Jiun and Yung, W.K. Alfred and Zhang, Wei and Zhang, Jianhua and Chen, Ken and Weinstein, John N. and Chin, Lynda and Verhaak, Roel G.W. and Noushmehr, Houtan and Weisenberger, Daniel J. and Bootwalla, Moiz S. and Lai, Phillip H. and Triche, Timothy J. and Van Den Berg, David J. and Laird, Peter W. and Gutmann, David H. and Lehman, Norman L. and VanMeir, Erwin G. and Brat, Daniel and Olson, Jeffrey J. and Mastrogianakis, Gena M. and Devi, Narra S. and Zhang, Zhaobin and Bigner, Darell and Lipp, Eric and McLendon, Roger},
+  author    = {Brennan, Cameron W. and Verhaak, Roel G.W. and McKenna, Aaron and Campos, Benito and Noushmehr, Houtan and Salama, Sofie R. and Zheng, Siyuan and Chakravarty, Debyani and Sanborn, J. Zachary and Berman, Samuel H. and Beroukhim, Rameen and Bernard, Brady and Wu, Chang-Jiun and Genovese, Giannicola and Shmulevich, Ilya and Barnholtz-Sloan, Jill and Zou, Lihua and Vegesna, Rahulsimham and Shukla, Sachet A. and Ciriello, Giovanni and Yung, W.K. and Zhang, Wei and Sougnez, Carrie and Mikkelsen, Tom and Aldape, Kenneth and Bigner, Darell D. and Van Meir, Erwin G. and Prados, Michael and Sloan, Andrew and Black, Keith L. and Eschbacher, Jennifer and Finocchiaro, Gaetano and Friedman, William and Andrews, David W. and Guha, Abhijit and Iacocca, Mary and O’Neill, Brian P. and Foltz, Greg and Myers, Jerome and Weisenberger, Daniel J. and Penny, Robert and Kucherlapati, Raju and Perou, Charles M. and Hayes, D. Neil and Gibbs, Richard and Marra, Marco and Mills, Gordon B. and Lander, Eric and Spellman, Paul and Wilson, Richard and Sander, Chris and Weinstein, John and Meyerson, Matthew and Gabriel, Stacey and Laird, Peter W. and Haussler, David and Getz, Gad and Chin, Lynda and Benz, Christopher and Barnholtz-Sloan, Jill and Barrett, Wendi and Ostrom, Quinn and Wolinsky, Yingli and Black, Keith L. and Bose, Bikash and Boulos, Paul T. and Boulos, Madgy and Brown, Jenn and Czerinski, Christine and Eppley, Matthew and Iacocca, Mary and Kempista, Thelma and Kitko, Teresa and Koyfman, Yakov and Rabeno, Brenda and Rastogi, Pawan and Sugarman, Michael and Swanson, Patricia and Yalamanchii, Kennedy and Otey, Ilana P. and Liu, Yingchun Spring and Xiao, Yonghong and Auman, J.Todd and Chen, Peng-Chieh and Hadjipanayis, Angela and Lee, Eunjung and Lee, Semin and Park, Peter J. and Seidman, Jonathan and Yang, Lixing and Kucherlapati, Raju and Kalkanis, Steven and Mikkelsen, Tom and Poisson, Laila M. and Raghunathan, Aditya and Scarpace, Lisa and Bernard, Brady and Bressler, Ryan and Eakin, Andrea and Iype, Lisa and Kreisberg, Richard B. and Leinonen, Kalle and Reynolds, Sheila and Rovira, Hector and Thorsson, Vesteinn and Shmulevich, Ilya and Annala, Matti J. and Penny, Robert and Paulauskis, Joseph and Curley, Erin and Hatfield, Martha and Mallery, David and Morris, Scott and Shelton, Troy and Shelton, Candace and Sherman, Mark and Yena, Peggy and Cuppini, Lucia and DiMeco, Francesco and Eoli, Marica and Finocchiaro, Gaetano and Maderna, Emanuela and Pollo, Bianca and Saini, Marco and Balu, Saianand and Hoadley, Katherine A. and Li, Ling and Miller, C. Ryan and Shi, Yan and Topal, Michael D. and Wu, Junyuan and Dunn, Gavin and Giannini, Caterina and O’Neill, Brian P. and Aksoy, B. Arman and Antipin, Yevgeniy and Borsu, Laetitia and Berman, Samuel H. and Brennan, Cameron W. and Cerami, Ethan and Chakravarty, Debyani and Ciriello, Giovanni and Gao, Jianjiong and Gross, Benjamin and Jacobsen, Anders and Ladanyi, Marc and Lash, Alex and Liang, Yupu and Reva, Boris and Sander, Chris and Schultz, Nikolaus and Shen, Ronglai and Socci, Nicholas D. and Viale, Agnes and Ferguson, Martin L. and Chen, Qing-Rong and Demchok, John A. and Dillon, Laura A.L. and Shaw, Kenna R. Mills and Sheth, Margi and Tarnuzzer, Roy and Wang, Zhining and Yang, Liming and Davidsen, Tanja and Guyer, Mark S. and Ozenberger, Bradley A. and Sofia, Heidi J. and Bergsten, Julie and Eckman, John and Harr, Jodi and Myers, Jerome and Smith, Christine and Tucker, Kelly and Winemiller, Cindy and Zach, Leigh Anne and Ljubimova, Julia Y. and Eley, Greg and Ayala, Brenda and Jensen, Mark A. and Kahn, Ari and Pihl, Todd D. and Pot, David A. and Wan, Yunhu and Eschbacher, Jennifer and Foltz, Greg and Hansen, Nathan and Hothi, Parvi and Lin, Biaoyang and Shah, Nameeta and Yoon, Jae-geun and Lau, Ching and Berens, Michael and Ardlie, Kristin and Beroukhim, Rameen and Carter, Scott L. and Cherniack, Andrew D. and Noble, Mike and Cho, Juok and Cibulskis, Kristian and DiCara, Daniel and Frazer, Scott and Gabriel, Stacey B. and Gehlenborg, Nils and Gentry, Jeff and Heiman, David and Kim, Jaegil and Jing, Rui and Lander, Eric S. and Lawrence, Michael and Lin, Pei and Mallard, Will and Meyerson, Matthew and Onofrio, Robert C. and Saksena, Gordon and Schumacher, Steve and Sougnez, Carrie and Stojanov, Petar and Tabak, Barbara and Voet, Doug and Zhang, Hailei and Zou, Lihua and Getz, Gad and Dees, Nathan N. and Ding, Li and Fulton, Lucinda L. and Fulton, Robert S. and Kanchi, Krishna-Latha and Mardis, Elaine R. and Wilson, Richard K. and Baylin, Stephen B. and Andrews, David W. and Harshyne, Larry and Cohen, Mark L. and Devine, Karen and Sloan, Andrew E. and VandenBerg, Scott R. and Berger, Mitchel S. and Prados, Michael and Carlin, Daniel and Craft, Brian and Ellrott, Kyle and Goldman, Mary and Goldstein, Theodore and Grifford, Mia and Haussler, David and Ma, Singer and Ng, Sam and Salama, Sofie R. and Sanborn, J. Zachary and Stuart, Joshua and Swatloski, Teresa and Waltman, Peter and Zhu, Jing and Foss, Robin and Frentzen, Barbara and Friedman, William and McTiernan, Raquel and Yachnis, Anthony and Hayes, D. Neil and Perou, Charles M. and Zheng, Siyuan and Vegesna, Rahulsimham and Mao, Yong and Akbani, Rehan and Aldape, Kenneth and Bogler, Oliver and Fuller, Gregory N. and Liu, Wenbin and Liu, Yuexin and Lu, Yiling and Mills, Gordon and Protopopov, Alexei and Ren, Xiaojia and Sun, Youting and Wu, Chang-Jiun and Yung, W.K. Alfred and Zhang, Wei and Zhang, Jianhua and Chen, Ken and Weinstein, John N. and Chin, Lynda and Verhaak, Roel G.W. and Noushmehr, Houtan and Weisenberger, Daniel J. and Bootwalla, Moiz S. and Lai, Phillip H. and Triche, Timothy J. and Van Den Berg, David J. and Laird, Peter W. and Gutmann, David H. and Lehman, Norman L. and VanMeir, Erwin G. and Brat, Daniel and Olson, Jeffrey J. and Mastrogianakis, Gena M. and Devi, Narra S. and Zhang, Zhaobin and Bigner, Darell and Lipp, Eric and McLendon, Roger},
   journal   = {Cell},
   title     = {The Somatic Genomic Landscape of Glioblastoma},
   year      = {2013},
@@ -308,6 +308,50 @@
   volume    = {15},
   doi       = {10.1016/j.jalz.2019.01.010},
   publisher = {Wiley},
+}
+
+@article{haghverdi2018batch,
+  title={Batch effects in single-cell RNA-sequencing data are corrected by matching mutual nearest neighbors},
+  author={Haghverdi, Laleh and Lun, Aaron TL and Morgan, Michael D and Marioni, John C},
+  journal={Nature biotechnology},
+  volume={36},
+  number={5},
+  pages={421--427},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+@article{zhang2020combat,
+  title={ComBat-seq: batch effect adjustment for RNA-seq count data},
+  author={Zhang, Yuqing and Parmigiani, Giovanni and Johnson, W Evan},
+  journal={NAR genomics and bioinformatics},
+  volume={2},
+  number={3},
+  pages={lqaa078},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{hahn2023atlas,
+  title={Atlas of the aging mouse brain reveals white matter as vulnerable foci},
+  author={Hahn, Oliver and Foltz, Aulden G and Atkins, Micaiah and Kedir, Blen and Moran-Losada, Patricia and Guldner, Ian H and Munson, Christy and Kern, Fabian and P{\'a}lovics, R{\'o}bert and Lu, Nannan and others},
+  journal={Cell},
+  volume={186},
+  number={19},
+  pages={4117--4133},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{gonzalez2022estimating,
+  title={Estimating the number of available states for normal and tumor tissues in gene expression space},
+  author={Gonzalez, Augusto and Quintela, Frank and Leon, Dario A and Bringas-Vega, Maria Luisa and Valdes-Sosa, Pedro A},
+  journal={Biophysical Reports},
+  volume={2},
+  number={2},
+  year={2022},
+  publisher={Elsevier},
+  doi={10.1016/j.bpr.2022.100053}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
