--- a/7_cap3.tex
+++ b/7_cap3.tex
@@ -1,11 +1,12 @@
 % !TeX root = Tesis.tex
 % !TeX encoding = UTF-8
-% !TeX spellcheck = es_ES
-\chapter{Chapter 3}
-\label{cap2}
+% !TeX spellcheck = es
+\chapter{Resultados}
+\label{cap3}
 \onehalfspacing
 
-%\section{}
-%\label{c31}
+Sobre la base de nuestros diagramas, podemos formular las siguientes observaciones o afirmaciones, que son los principales resultados del trabajo.
 
-\lipsum[6-8]
+\begin{enumerate}
+	\item  \textbf{Existe una dirección en el espacio de expresión genética, que a grandes rasgos se puede identificar con el eje PC1, asociada al envejecimiento y a un aumento del riesgo de padecer GB y la EA.}
+\end{enumerate}
