--- a/bibl.bib
+++ b/bibl.bib
@@ -354,4 +354,60 @@
   doi={10.1016/j.bpr.2022.100053}
 }
 
+@article{spalding2005retrospective,
+  title={Retrospective birth dating of cells in humans},
+  author={Spalding, Kirsty L and Bhardwaj, Ratan D and Buchholz, Bruce A and Druid, Henrik and Fris{\'e}n, Jonas},
+  journal={Cell},
+  volume={122},
+  number={1},
+  pages={133--143},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{schumacher2021central,
+  title={The central role of DNA damage in the ageing process},
+  author={Schumacher, Bj{\"o}rn and Pothof, Joris and Vijg, Jan and Hoeijmakers, Jan HJ},
+  journal={Nature},
+  volume={592},
+  number={7856},
+  pages={695--703},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{guttmann1998white,
+  title={White matter changes with normal aging},
+  author={Guttmann, Charles RG and Jolesz, Ferenc A and Kikinis, Ron and Killiany, Ron J and Moss, Mark B and Sandor, Tamas and Albert, Marilyn S},
+  journal={Neurology},
+  volume={50},
+  number={4},
+  pages={972--978},
+  year={1998},
+  publisher={Lippincott Williams \& Wilkins}
+}
+
+@Article{Tomczak2015,
+  author    = {Katarzyna Tomczak and Patrycja Czerwińska and Maciej Wiznerowicz},
+  journal   = {Contemp Oncol (Pozn)},
+  title     = {{Review The Cancer Genome Atlas (TCGA): an immeasurable source of knowledge}},
+  year      = {2015},
+  pages     = {68--77},
+  volume    = {1A},
+  doi       = {https://doi.org/10.5114/wo.2014.47136},
+  publisher = {Termedia Sp. z.o.o.},
+}
+
+@Article{Zhao_2021,
+  author    = {Yingdong Zhao and Ming-Chung Li and Mariam M. Konat{\'{e}} and Li Chen and Biswajit Das and Chris Karlovich and P. Mickey Williams and Yvonne A. Evrard and James H. Doroshow and Lisa M. McShane},
+  journal   = {Journal of Translational Medicine},
+  title     = {{TPM}, {FPKM}, or Normalized Counts? A Comparative Study of Quantification Measures for the Analysis of {RNA}-seq Data from the {NCI} Patient-Derived Models Repository},
+  year      = {2021},
+  month     = {jun},
+  number    = {1},
+  volume    = {19},
+  doi       = {10.1186/s12967-021-02936-w},
+  publisher = {Springer Science and Business Media {LLC}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
